@@ -18,6 +18,8 @@ v0.10.3
     an existing connection object (restart)
 [+] crofsock: make backlog for listening mode configurable, defaults to 
     64 established TCP connections
+[B] crofchan: fixed bug in handle_closed(): conn was not removed from
+    crofchan::conns map
 
 v0.10.2
 
